feat: togglebutton check

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -40,7 +40,7 @@
   <div class="switch">
     <label>
       Off
-      <input type="checkbox"  id="toggle-button" checked="checked">
+      <input type="checkbox"  id="toggle-button" value="DISABLE" checked>
       <span class="lever"></span>
       On
     </label>
@@ -48,6 +48,7 @@
   </div>
   <!--JavaScript at end of body for optimized loading-->
   <script type="text/javascript" src="js/materialize.min.js"></script>
+  <script type="text/javascript" src="js/popup.js"></script>
 
 </body>
 </html>
