Feat: modified input param

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -26,10 +26,10 @@
 <body>
   <div class="row">
     <img class="logo" src="logo_200.png" alt="Nevermark logo" />
-    <form class="col s12" action="http://www.google.com" method="GET" target="_blank">
+    <form class="col s12" action="http:///192.168.56.1:3000/search" method="GET" target="_blank">
       <div class="row">
         <div class="input-field col s12">
-          <input id="input" type="text" placeholder="Search your history" name="param1"></input>
+          <input id="input" type="text" placeholder="Search your history" name="?"></input>
           <button class="btn blue accent-4" type="submit">Search
             <i class="material-icons right blue accent-4 ">send</i>
           </button>
