replaces logo.png with full resolution pic

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -19,13 +19,14 @@
       background-color: #64b5f6;
     }
 
+
     </style>
 
 
 </head>
 <body>
   <div class="row">
-    <img class="logo" src="logo_200.png" alt="Nevermark logo" />
+    <img class="logo" src="logo.png" alt="Nevermark logo" />
     <form class="col s12" action="http:///192.168.56.1:3000/search" method="GET" target="_blank">
       <div class="row">
         <div class="input-field col s12">
