--- a/extension/popup.html
+++ b/extension/popup.html
@@ -6,10 +6,10 @@
   <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!--Import materialize.css-->
-  <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-  <link rel="stylesheet" type="text/css" href="css/popup.css">
+  <link type="text/css" rel="stylesheet" href="assets/css/materialize.min.css"  media="screen,projection"/>
+  <link rel="stylesheet" type="text/css" href="assets/css/popup.css">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script src="js/jquery-3.4.1.min.js"></script>
+  <script src="assets/js/jquery-3.4.1.min.js"></script>
   <title>Nevermark</title>
     <style>
       .switch label input[type=checkbox]:checked + .lever:after {
@@ -25,7 +25,7 @@
 </head>
 <body>
   <div class="row">
-    <img class="logo" src="logo_200.png" alt="Nevermark logo" />
+    <img class="logo" src="assets/img/logo_200.png" alt="Nevermark logo" />
     <form class="col s12" action="http://www.google.com" method="GET" target="_blank">
       <div class="row">
         <div class="input-field col s12">
@@ -47,8 +47,8 @@
   </div>
   </div>
   <!--JavaScript at end of body for optimized loading-->
-  <script type="text/javascript" src="js/materialize.min.js"></script>
-  <script type="text/javascript" src="js/popup.js"></script>
+  <script type="text/javascript" src="assets/js/materialize.min.js"></script>
+  <script type="text/javascript" src="assets/js/popup.js"></script>
 
 </body>
 </html>
