--- a/extension/popup.html
+++ b/extension/popup.html
@@ -5,28 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
   <!--Import materialize.css-->
   <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
   <link rel="stylesheet" type="text/css" href="css/popup.css">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script src="js/jquery-3.4.1.min.js"></script>
   <title>Nevermark</title>
     <style>
-      .switch label input[type=checkbox]:checked + .lever:after {
-      background-color: #2962ff;
-    }
-    .switch label input[type=checkbox]:checked + .lever {
-      background-color: #64b5f6;
-    }
-
-
+      .btn {
+        margin-top: 10px;
+      }
     </style>
-
-
 </head>
 <body>
-  <div class="row">
-    <img class="logo" src="logo.png" alt="Nevermark logo" />
+  <div class="container">
+    <div class="row">
+      <div class="logo-new">
+        <h4>nevermark</h4>
+      </div>
+      <div>
+        <p>This is a test</p>
+      </div>
+    </div>
     <form class="col s12" action="http:///192.168.56.1:3000/search" method="GET" target="_blank">
       <div class="row">
         <div class="input-field col s12">
@@ -37,19 +37,10 @@
         </div>
       </div>
     </form>
-    <!-- Switch -->
-  <div class="switch">
-    <label>
-      Off
-      <input type="checkbox"  id="toggle-button" value="DISABLE" checked>
-      <span class="lever"></span>
-      On
-    </label>
   </div>
-  </div>
+
   <!--JavaScript at end of body for optimized loading-->
   <script type="text/javascript" src="js/materialize.min.js"></script>
   <script type="text/javascript" src="js/popup.js"></script>
-
 </body>
 </html>
