--- a/extension/popup.html
+++ b/extension/popup.html
@@ -13,8 +13,18 @@
   <title>Nevermark</title>
     <style>
       .btn {
-        margin-top: 10px;
+        margin-top: 20px;
+        font-family: 'Lato', sans-serif;
       }
+      .input-field {
+        font-family: 'Lato', sans-serif;
+        width: 50%;
+      }
+        .input-field input[type=text]:focus, .materialize-textarea:focus:not([readonly]) {
+        border-bottom: 1px solid #263238 !important;
+        box-shadow: 0 1px 0 0 #263238 !important;
+        }
+
     </style>
 </head>
 <body>
@@ -23,16 +33,13 @@
       <div class="logo-new">
         <h4>nevermark</h4>
       </div>
-      <div>
-        <p>This is a test</p>
-      </div>
     </div>
     <form class="col s12" action="http:///192.168.56.1:3000/search" method="GET" target="_blank">
       <div class="row">
         <div class="input-field col s12">
           <input id="input" type="text" placeholder="Search your history" name="?"></input>
-          <button class="btn blue accent-4" type="submit">Search
-            <i class="material-icons right blue accent-4 ">send</i>
+          <button class="btn  blue-grey darken-4" type="submit">Search
+            <i class="material-icons right ">search</i>
           </button>
         </div>
       </div>
