--- a/extension/popup.html
+++ b/extension/popup.html
@@ -31,7 +31,7 @@
   <div class="container">
     <div class="row">
       <div class="logo-new">
-        <h4>nevermark</h4>
+        <h4 class="noselect">nevermark</h4>
       </div>
     </div>
     <form class="col s12" action="http:///192.168.56.1:3000/search" method="GET" target="_blank">
