--- a/extension/popup.html
+++ b/extension/popup.html
@@ -7,8 +7,8 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
   <!--Import materialize.css-->
-  <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-  <link rel="stylesheet" type="text/css" href="css/popup.css">
+  <link type="text/css" rel="stylesheet" href="assets/css/materialize.min.css"  media="screen,projection"/>
+  <link rel="stylesheet" type="text/css" href="assets/css/popup.css">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Nevermark</title>
     <style>
@@ -47,7 +47,7 @@
   </div>
 
   <!--JavaScript at end of body for optimized loading-->
-  <script type="text/javascript" src="js/materialize.min.js"></script>
-  <script type="text/javascript" src="js/popup.js"></script>
+  <script type="text/javascript" src="assets/js/materialize.min.js"></script>
+  <script type="text/javascript" src="assets/js/popup.js"></script>
 </body>
 </html>
