--- a/extension/popup.html
+++ b/extension/popup.html
@@ -37,7 +37,7 @@
     <form class="col s12" action="http:///192.168.56.1:3000/search" method="GET" target="_blank">
       <div class="row">
         <div class="input-field col s12">
-          <input id="input" type="text" placeholder="Search your history" name="?"></input>
+          <input id="input" type="text" placeholder="Search your history" autofocus name="q"></input>
           <button class="btn  blue-grey darken-4" type="submit">Search
             <i class="material-icons right ">search</i>
           </button>
