--- a/extension/popup.html
+++ b/extension/popup.html
@@ -36,10 +36,10 @@
         <h4 class="noselect">nevermark</h4>
       </div>
     </div>
-    <form class="col s12" action="http:///192.168.56.1:3000/search" method="GET" target="_blank">
+    <form class="col s12" action="http:///localhost:3001/search" method="GET" target="_blank">
       <div class="row">
         <div class="input-field col s12">
-          <input id="input" type="text" placeholder="Search your history" autofocus name="q"></input>
+          <input type="text" placeholder="Search your history" autofocus name="q" id='query'></input>
           <button class="btn  blue-grey darken-4" type="submit">Search
             <i class="material-icons right ">search</i>
           </button>
@@ -51,6 +51,7 @@
   </div>
   <!--JavaScript at end of body for optimized loading-->
   <script type="text/javascript" src="assets/js/materialize.min.js"></script>
+  <script type="text/javascript" src="assets/js/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="assets/js/popup.js"></script>
  
 </body>
