style: few adjustments: logo-italics button same as web

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -39,7 +39,7 @@
     <form class="col s12" action="http:///localhost:3001/search" method="GET" target="_blank">
       <div class="row">
         <div class="input-field col s12">
-          <input type="text" placeholder="Search your history" autofocus name="q" id='query'></input>
+          <input class="search-input-ext" type="text" placeholder="Search" autocomplete="off" autofocus name="q" id='query'></input>
           <button class="btn  blue-grey darken-4" type="submit">Search
             <i class="material-icons right ">search</i>
           </button>
@@ -53,6 +53,6 @@
   <script type="text/javascript" src="assets/js/materialize.min.js"></script>
   <script type="text/javascript" src="assets/js/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="assets/js/popup.js"></script>
- 
+
 </body>
 </html>
