--- a/extension/popup.html
+++ b/extension/popup.html
@@ -33,6 +33,7 @@
   <div class="container">
     <div class="row">
       <div class="logo-new">
+        <img class="logo-image" src="assets/img/nevermark-logo.svg">
         <h4 class="noselect">nevermark</h4>
       </div>
     </div>
